--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-hello world hi
+  user_action = input("Enter a choice (rock, paper, scissors): ")
   <script src="script.js"></script>
 
   <!--
