--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  user_action = input("Enter a choice (rock, paper, scissors): ")   
+  hello world  
   <script src="script.js"></script>
 
   <!--
