--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
- user_action = input("Enter a choice (rock, paper, scissors): ")
+ Hi world how are you
   <script src="script.js"></script>
 
   <!--
